--- a/admin/templates/change_password.html
+++ b/admin/templates/change_password.html
@@ -152,10 +152,12 @@
         {% endif %}
         
         <form method="POST" action="/change-password">
+            {% if not challenge_required %}
             <div class="form-group">
                 <label for="current_password">Current Password</label>
                 <input type="password" id="current_password" name="current_password" required>
             </div>
+            {% endif %}
             <div class="form-group">
                 <label for="new_password">New Password</label>
                 <input type="password" id="new_password" name="new_password" required minlength="8">
@@ -174,4 +176,3 @@
     </div>
 </body>
 </html>
-
